[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture2D" id=1]
[ext_resource path="res://Interface/InventorySlot.gd" type="Script" id=2]

[node name="InventorySlot" type="Control"]
offset_right = 80.0
offset_bottom = 80.0
custom_minimum_size = Vector2( 80, 80 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
hover_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="Border" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Border"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_RadialOption_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_RadialOption_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RadialOption_mouse_exited"]
